[package]
name = "ebpf"
version = "0.1.0"
authors = ["ferris <ferris@ferrisellsi.com>"]

[features]

# default for usage is the newest version
default = ["kernel_4_11", "beta"]

# for marking stability of feature
stable = []
beta = ["stable"]
alpha = ["beta"]

# 
kernel_3_18 = [
    # enable maps and use hashmap and array type maps
    "maps",
    # enable loading elf files for usage
    "elf_loader",
    # enable socket filter usage
    "socket_filter"
]

kernel_4_11 = [
    # enable maps and use hashmap and array type maps
    "maps",
    # enable loading elf files for usage
    "elf_loader",
    # enable socket filter usage
    "socket_filter"
]

# enable manipulation of maps
maps = []
# enable loading of programs from ELF files
elf_loader = ["xmas-elf"]
# enable usage of programs for socket filtering
socket_filter = []


[dependencies]
libc = "0.2"

xmas-elf = { version = "0.6.0", optional = true }
